fixed cover photos at large sizes and left aligned the post index

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,9 @@
+@media (max-width:3000px) {
+  #cover-photo {
+    max-width: 95%;
+  }
+}
+
 @media (max-width:1309px) {
   #cover-photo {
     max-width: 95%;
